# AntiFakerAndroidChecker

./: .gitignore  LICENSE  README.md  Untitled  U测平台模拟器检测结果及稳定性.xlsx  build.gradle  com.bigsing.changer-1.rar  gradlew  gradlew.bat  import-summary.txt  local.properties  publish.gradle  settings.gradle  sonar-project.properties
antifake/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
antifake/src/androidTest/java/com/snail/antifake/: ExampleInstrumentedTest.java
antifake/src/main/: AndroidManifest.xml
antifake/src/main/aidl/com/android/internal/telephony/: IEmulatorCheck.aidl
antifake/src/main/aidl/com/snail/antifake/: IEmulatorCheck.aidl
antifake/src/main/java/com/android/internal/telephony/: IEmulatorCheck.java  ITelephony.java
antifake/src/main/java/com/snail/antifake/deviceid/: AndroidDeviceIMEIUtil.java  BatteryChangeReceiver.java  BinderUtil.java  CrashHandler.java  IpScanner.java  SensorUtil.java  ShellAdbUtils.java
antifake/src/main/java/com/snail/antifake/deviceid/androidid/: IAndroidIdUtil.java  ISettingUtils.java
antifake/src/main/java/com/snail/antifake/deviceid/deviceid/: DeviceIdUtil.java  IPhoneSubInfoUtil.java  ITelephonyUtil.java
antifake/src/main/java/com/snail/antifake/deviceid/emulator/: EmuCheckUtil.java
antifake/src/main/java/com/snail/antifake/deviceid/macaddress/: IWifiManagerUtil.java  MacAddressUtils.java
antifake/src/main/java/com/snail/antifake/jni/: EmulatorCheckService.java  EmulatorDetectUtil.java  PropertiesGet.java
antifake/src/main/jni/: Android.mk  Application.mk
antifake/src/main/jni/emulator/: com.snail.antifake_jni_EmulatorDetectUtil.c  com.snail.antifake_jni_EmulatorDetectUtil.h  emcheck.c  emcheck32.c  emcheck64.c
antifake/src/main/jni/property/: com.snail.antifake_jni_PropertiesGet.h  proget.c
antifake/src/main/res/values/: strings.xml
antifake/src/test/java/com/snail/antifake/: ExampleUnitTest.java
app/: app-release.apk  build.gradle  proguard-rules.pro
app/src/adbi/: README.md  build.sh  clean.sh  mk.sh
app/src/adbi/hijack/: hijack.c
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cn.shuzilm.config.json  xposed_init
gradle/wrapper/: gradle-wrapper.properties
release/: antifake-release.aar
telephony/: build.gradle
telephony/src/main/: AndroidManifest.xml
(+109 files in other folders)
